# mcp-worktree-workflows

./: .gitignore  .mcp.json  README.md  __main__.py  mcp_worktree_voting.py  pyproject.toml  start_mcp_server.sh  worktree_workflows.py
.claude/: settings.local.json
.claude/agents/: data-analyst.md  data-code-reviewer.md  data-engineer.md  data-scientist.md  meta-agent.md  ml-engineer.md  work-completion-summary.md
.claude/commands/: adhoc.md  cleanup-worktrees.md  orchestrate.md  voting-status.md  voting.md  workflow-adhoc.md  workflow-orchestrate.md  workflow-voting-status.md  workflow-voting.md
.claude/hooks/utils/tts/: elevenlabs_tts.py
logs/: chat.json  session_start.json  stop.json  user_prompt_submit.json
mcp-servers/: dagster_server.py  dlt_server.py  docker_server.py  duckdb_server.py  soda_server.py  sqlmesh_server.py  worktree_server.py
