[project]
name = "mcp-servers"
version = "0.1.0"
description = "MCP server implementations for advanced agent workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
]

[project.scripts]
mcp-worktree-voting = "mcp_worktree_voting:main"

[tool.uv.workspace]
members = ["test_repo"]
